update:添加user表字段，优化跨域域名配置，对接查询优化

--- a/config/config.json
+++ b/config/config.json
@@ -15,5 +15,7 @@
     "host": "172.16.100.129",
     "port": 4000,
     "default": true
-  }
+  },
+
+  "allowHost": ["http://localhost:1111", "http://127.0.0.1:1111"]
 }
